# weather-cli

./: Cargo.toml
src/: main.rs
src/cmd/: mod.rs  solar.rs  weather.rs
src/models/: weather.rs
src/utils/: config.rs
