[package]
name = "weather-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = [ "derive" ]}
confy = "1.0.0"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
anyhow = "1.0.0"
reqwest = { version = "0.12.15", features = ["json"]}
tokio = { version = "1.45.0", features = [ "full" ]}
dotenv = "0.15.0"